Add spotty, remove index.md

--- a/projects.json
+++ b/projects.json
@@ -10,6 +10,15 @@
         "tags": []
     },
     {
+        "name": "Spotty",
+        "description": "Do you have parking space you never use? Spotty can help advertise this space for you and help other drivers who are looking for parking. Using IoT, Spotty can use cameras and sensors to provide automated security, and status of your parking space ensuring that your property is safe.        ",
+        "year": 2018,
+        "ghlink": "https://github.com/nickwu241/spotty",
+        "languages": ["Javascript"],
+        "technologies": ["React Native", "Node.js", "Firebase", "Google Cloud Storage", "Goole Cloud Vision API", "Node-RED", "Hardware (Raspberry Pi, Orange Pi Zero, Amazon Alexa, cameras, ultrasonic sensors, temperature sensors"],
+        "tags": []
+    },
+    {
         "name": "Review Me",
         "description": "Automatic notifications to remind PR reviewers, multi-repo issue list, and slack notifications for unread Github notifications for better productivity.",
         "year": 2018,
