--- a/projects.json
+++ b/projects.json
@@ -10,7 +10,7 @@
         "tags": []
     },
     {
-        "name": "Spotty",
+        "name": "Spotty: 1st Place @ RUHacks2018",
         "description": "Do you have parking space you never use? Spotty can help advertise this space for you and help other drivers who are looking for parking. Using IoT, Spotty can use cameras and sensors to provide automated security, and status of your parking space ensuring that your property is safe.        ",
         "year": 2018,
         "ghlink": "https://github.com/nickwu241/spotty",
@@ -19,7 +19,7 @@
         "tags": []
     },
     {
-        "name": "Review Me",
+        "name": "Review Me: Winner of AWS Prize @ Hack The Valley 2018",
         "description": "Automatic notifications to remind PR reviewers, multi-repo issue list, and slack notifications for unread Github notifications for better productivity.",
         "year": 2018,
         "ghlink": "https://github.com/nickwu241/review-me",
